mejorando el rendimiendo

--- a/docs/output.css
+++ b/docs/output.css
@@ -677,6 +677,14 @@ video {
   outline-offset: 2px;
 }
 
+.input::-moz-placeholder {
+  color: transparent;
+}
+
+.input::placeholder {
+  color: transparent;
+}
+
 .input:valid {
   --tw-border-opacity: 1;
   border-bottom-color: hsl(166 82% 28% / var(--tw-border-opacity));
@@ -748,6 +756,10 @@ video {
   border-bottom-color: hsl(166 82% 28% / var(--tw-border-opacity));
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -816,6 +828,18 @@ video {
   height: 98px;
 }
 
+.h-\[630px\] {
+  height: 630px;
+}
+
+.h-\[613px\] {
+  height: 613px;
+}
+
+.max-h-\[808px\] {
+  max-height: 808px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -834,6 +858,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[464px\] {
+  width: 464px;
 }
 
 .max-w-\[400px\] {
@@ -896,12 +924,26 @@ video {
   gap: 2rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .bg-clr-neutral-700 {
@@ -940,6 +982,10 @@ video {
 
 .to-clr-neutral-700 {
   --tw-gradient-to: #1a1a1a var(--tw-gradient-to-position);
+}
+
+.stroke-clr-primary-400 {
+  stroke: hsl(166, 81%, 39%);
 }
 
 .object-contain {
