--- a/docs/output.css
+++ b/docs/output.css
@@ -550,27 +550,18 @@ video {
 }
 
 .grid-skills {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   row-gap: 2rem;
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
 
-@media (min-width: 768px) {
-  .grid-skills {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-}
-
-@media (min-width: 1296px) {
-  .grid-skills {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-}
-
 .grid-item-hobbie {
   display: grid;
+  width: 100%;
+  max-width: 144px;
   align-items: center;
   justify-items: center;
   border-radius: 0.25rem;
@@ -600,9 +591,16 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+@media (min-width: 768px) {
+  .grid-item-hobbie {
+    max-width: 250px;
+  }
+}
+
 @media (min-width: 1296px) {
   .grid-item-hobbie {
     height: 174px;
+    max-width: 300px;
   }
 }
 
@@ -828,18 +826,6 @@ video {
   height: 98px;
 }
 
-.h-\[630px\] {
-  height: 630px;
-}
-
-.h-\[613px\] {
-  height: 613px;
-}
-
-.max-h-\[808px\] {
-  max-height: 808px;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -858,10 +844,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[464px\] {
-  width: 464px;
 }
 
 .max-w-\[400px\] {
@@ -924,10 +906,6 @@ video {
   gap: 2rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -941,9 +919,9 @@ video {
   border-bottom-left-radius: 0.25rem;
 }
 
-.rounded-l-md {
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+.border-clr-neutral-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-clr-neutral-700 {
@@ -1060,13 +1038,33 @@ video {
   color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
-.text-clr-neutral-700 {
+.text-clr-neutral-900 {
   --tw-text-opacity: 1;
-  color: rgb(26 26 26 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.mix-blend-darken {
+  mix-blend-mode: darken;
+}
+
+.mix-blend-lighten {
+  mix-blend-mode: lighten;
 }
 
 .mix-blend-color-burn {
   mix-blend-mode: color-burn;
+}
+
+.mix-blend-hard-light {
+  mix-blend-mode: hard-light;
+}
+
+.mix-blend-hue {
+  mix-blend-mode: hue;
+}
+
+.mix-blend-saturation {
+  mix-blend-mode: saturation;
 }
 
 .mix-blend-color {
