Mejoras pequeñas de diseño

--- a/docs/output.css
+++ b/docs/output.css
@@ -565,9 +565,7 @@ video {
   align-items: center;
   justify-items: center;
   border-radius: 0.25rem;
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
   --tw-gradient-from: hsl(0, 0%, 8%) var(--tw-gradient-from-position);
   --tw-gradient-to: hsl(0 0% 8% / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
@@ -850,6 +848,14 @@ video {
   max-width: 400px;
 }
 
+.max-w-\[638px\] {
+  max-width: 638px;
+}
+
+.max-w-\[1880px\] {
+  max-width: 1880px;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -874,12 +880,20 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
 .justify-items-center {
   justify-items: center;
+}
+
+.justify-items-stretch {
+  justify-items: stretch;
 }
 
 .gap-0 {
@@ -904,6 +918,14 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded {
@@ -942,6 +964,10 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
 .from-clr-neutral-200 {
   --tw-gradient-from: #34e89e var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(52 232 158 / 0) var(--tw-gradient-to-position);
@@ -952,6 +978,28 @@ video {
   --tw-gradient-from: hsl(0, 0%, 8%) var(--tw-gradient-from-position);
   --tw-gradient-to: hsl(0 0% 8% / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-clr-neutral-400 {
+  --tw-gradient-from: #0f3443 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(15 52 67 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-clr-primary-400 {
+  --tw-gradient-from: hsl(166, 81%, 39%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(166 81% 39% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-clr-neutral-500 {
+  --tw-gradient-to: hsl(0 0% 8% / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 8%) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-clr-primary-400 {
+  --tw-gradient-to: hsl(166 81% 39% / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), hsl(166, 81%, 39%) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .to-clr-neutral-400 {
@@ -1043,28 +1091,8 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.mix-blend-darken {
-  mix-blend-mode: darken;
-}
-
-.mix-blend-lighten {
-  mix-blend-mode: lighten;
-}
-
 .mix-blend-color-burn {
   mix-blend-mode: color-burn;
-}
-
-.mix-blend-hard-light {
-  mix-blend-mode: hard-light;
-}
-
-.mix-blend-hue {
-  mix-blend-mode: hue;
-}
-
-.mix-blend-saturation {
-  mix-blend-mode: saturation;
 }
 
 .mix-blend-color {
