Agregando animacion a el modal

--- a/docs/output.css
+++ b/docs/output.css
@@ -910,6 +910,42 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes jump-in {
+  0% {
+    transform: scale(0%);
+  }
+
+  80% {
+    transform: scale(120%);
+  }
+
+  100% {
+    transform: scale(100%);
+  }
+}
+
+.animate-jump-in {
+  animation: jump-in .5s both;
+}
+
+@keyframes jump-out {
+  0% {
+    transform: scale(100%);
+  }
+
+  20% {
+    transform: scale(120%);
+  }
+
+  100% {
+    transform: scale(0%);
+  }
+}
+
+.animate-jump-out {
+  animation: jump-out .5s both;
+}
+
 .cursor-default {
   cursor: default;
 }
@@ -958,6 +994,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -976,6 +1016,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-l {
@@ -1037,6 +1081,11 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.via-clr-neutral-500 {
+  --tw-gradient-to: hsl(0 0% 8% / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 8%) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .via-clr-primary-400 {
   --tw-gradient-to: hsl(166 81% 39% / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), hsl(166, 81%, 39%) var(--tw-gradient-via-position), var(--tw-gradient-to);
@@ -1050,6 +1099,10 @@ video {
   --tw-gradient-to: #1a1a1a var(--tw-gradient-to-position);
 }
 
+.fill-clr-primary-400 {
+  fill: hsl(166, 81%, 39%);
+}
+
 .stroke-clr-primary-400 {
   stroke: hsl(166, 81%, 39%);
 }
@@ -1057,6 +1110,10 @@ video {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.p-20 {
+  padding: 5rem;
 }
 
 .p-4 {
@@ -1166,6 +1223,38 @@ video {
   transition-duration: 150ms;
 }
 
+.animate-delay-1000 {
+  animation-delay: 1000ms;
+}
+
+.animate-delay-0 {
+  animation-delay: 0ms;
+}
+
+.animate-duration-1000 {
+  animation-duration: 1000ms;
+}
+
+.animate-duration-500 {
+  animation-duration: 500ms;
+}
+
+.animate-duration-\[1500ms\] {
+  animation-duration: 1500ms;
+}
+
+.animate-infinite {
+  animation-iteration-count: infinite;
+}
+
+.animate-once {
+  animation-iteration-count: 1;
+}
+
+.animate-ease-in-out {
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1191,14 +1280,6 @@ body {
 
 .backdrop\:to-clr-neutral-400::backdrop {
   --tw-gradient-to: #0f3443 var(--tw-gradient-to-position);
-}
-
-.backdrop\:opacity-20::backdrop {
-  opacity: 0.2;
-}
-
-.backdrop\:opacity-70::backdrop {
-  opacity: 0.7;
 }
 
 .backdrop\:opacity-50::backdrop {
