Arreglo en la redacción

--- a/docs/output.css
+++ b/docs/output.css
@@ -780,10 +780,21 @@ video {
 .input-error-message {
   pointer-events: none;
   position: absolute;
-  top: 3.5rem;
+  top: 58px;
   left: 0px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
   --tw-text-opacity: 1;
   color: hsl(337 42% 54% / var(--tw-text-opacity));
+}
+
+@media (min-width: 1296px) {
+  .input-error-message {
+    top: 3.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 .invisible {
@@ -806,8 +817,8 @@ video {
   top: 0px;
 }
 
-.top-\[132px\] {
-  top: 132px;
+.top-\[135px\] {
+  top: 135px;
 }
 
 .z-10 {
@@ -926,24 +937,6 @@ video {
 
 .animate-jump-in {
   animation: jump-in .5s both;
-}
-
-@keyframes jump-out {
-  0% {
-    transform: scale(100%);
-  }
-
-  20% {
-    transform: scale(120%);
-  }
-
-  100% {
-    transform: scale(0%);
-  }
-}
-
-.animate-jump-out {
-  animation: jump-out .5s both;
 }
 
 .cursor-default {
@@ -1223,28 +1216,12 @@ video {
   transition-duration: 150ms;
 }
 
-.animate-delay-1000 {
-  animation-delay: 1000ms;
-}
-
 .animate-delay-0 {
   animation-delay: 0ms;
 }
 
 .animate-duration-1000 {
   animation-duration: 1000ms;
-}
-
-.animate-duration-500 {
-  animation-duration: 500ms;
-}
-
-.animate-duration-\[1500ms\] {
-  animation-duration: 1500ms;
-}
-
-.animate-infinite {
-  animation-iteration-count: infinite;
 }
 
 .animate-once {
@@ -1292,12 +1269,12 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:grayscale-0:hover {
+.group:hover .group-hover\:grayscale-0 {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.focus\:grayscale-0:focus {
+.group:focus .group-focus\:grayscale-0 {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1385,6 +1362,10 @@ body {
 }
 
 @media (min-width: 1296px) {
+  .xl\:top-\[133px\] {
+    top: 133px;
+  }
+
   .xl\:m-0 {
     margin: 0px;
   }
